--- a/roles/setup-weblogic/tasks/main.yml
+++ b/roles/setup-weblogic/tasks/main.yml
@@ -64,7 +64,7 @@
 
 
 
-- name: install Necassary tools on the remote server
+- name: Install Necessary tools on the remote server
   become: yes
   become_user: root
   tags: installtools
